--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "docker-app",
+  "name": "api-app",
   "version": "1.0.0",
-  "description": "Node App for the container",
+  "description": "API for web app",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "author": "Nayeem John",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.1"
-  }
+  "license": "ISC"
 }
