--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Nayeem John",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
+    "tracer": "^1.1.6"
   }
 }
